package app.dto;
public record HouseDTO(int id, int amountRooms, int amountBathrooms, Integer characterId) {
}
